--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^0.8.1",
     "axios": "^1.6.7",
     "sass": "^1.71.1",
     "vue": "^3.4.15"
